2005-01-13  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: added case for 86_64 in IEEE arithmetic interface
	detection

2004-10-26  Brian Gough  <bjg@network-theory.co.uk>

	* test_gsl_histogram.sh: trim \r from test output for
	compatibility with Cygwin.

2004-07-29  Brian Gough  <bjg@network-theory.co.uk>

	* modified all makefiles to use TESTS=$(check_programs)
	to get correct EXEEXT behavior

2004-07-23  Brian Gough  <bjg@network-theory.co.uk>

	* added wavelet/ directory

2004-05-28  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: ran configure script through Autoconf's autoupdate
	to use latest macro names

2004-05-17  Brian Gough  <bjg@network-theory.co.uk>

	* gsl.m4: fix m4 quoting of first argument to AC_DEFUN

2004-03-17  Brian Gough  <bjg@network-theory.co.uk>

	* gsl/Makefile.am (header-links): use test -r instead of test -e
	(to avoid problem on Solaris as described in autoconf
	documentation)

2003-12-20  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: define _GNU_SOURCE when looking for fenv.h

2003-06-17  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: converted configure.in to autoconf 2.5x, involved
	extensive renaming macros of HAVE_... to HAVE_DECL_.. and changing
	usage from #ifdef HAVE to #if HAVE

2003-06-16  Brian Gough  <bjg@network-theory.co.uk>

	* gsl/Makefile.am (header-links): added a test for the existing
	file to avoid spurious error messages when making the symlinks

2003-06-12  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: Tidying up, removed old test for bug in gcc 2.95
	on PPC, removed OS/2 warning, removed references to clock function
	since benchmark programs are not shipped

2003-03-06  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_types.h: changed from internal macro _DLL to GSL_DLL

2003-02-09  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: added [] quotes in AC_TRY_COMPILE to protect
	nested macros

2002-11-24  Brian Gough  <bjg@network-theory.co.uk>
