@@ -1,3 +1,7 @@
+2005-04-05  Brian Gough  <bjg@network-theory.co.uk>
+
+	* infnan.c: added #include ieeefp.h for Solaris
+
 2004-12-22  Brian Gough  <bjg@network-theory.co.uk>
 
 	* infnan.c (gsl_isinf): added missing return type of int
