@@ -1,3 +1,7 @@
+2005-04-05  Brian Gough  <bjg@network-theory.co.uk>
+
+	* configure.ac: added ieeefp.h test for solaris
+
 2005-01-13  Brian Gough  <bjg@network-theory.co.uk>
 
 	* configure.ac: added case for 86_64 in IEEE arithmetic interface
